style.css
/* ... */
.gg-comment::after,
.gg-comment::before {
 content: "";
 display: block;
 box-sizing: border-box;
 position: absolute;
 width: 8px
}

.gg-comment::before {
 border: 2px solid;
 border-top-color: transparent;
 border-bottom-left-radius: 20px;
 right: 4px;
 bottom: -6px;
 height: 6px
}

.gg-comment::after {
 height: 2px;
 background: currentColor;
 box-shadow: 0 4px 0 0;
 left: 4px;
 top: 4px
} 


 .gg-shopping-cart {
 display: block;
 box-sizing: border-box;
 position: relative;
 transform: scale(var(--ggs,1));
 width: 20px;
 height: 21px;
 background:
 linear-gradient(
 to left,currentColor 12px,
 transparent 0)
 no-repeat -1px 6px/18px 2px,
 linear-gradient(
 to left,currentColor 12px,
 transparent 0)
 no-repeat 6px 14px/11px 2px,
 linear-gradient(
 to left,currentColor 12px,
 transparent 0)
 no-repeat 0 2px/4px 2px,
 radial-gradient(
 circle,currentColor 60%,
 transparent 40%)
 no-repeat 12px 17px/4px 4px,
 radial-gradient(
 circle,currentColor 60%,
 transparent 40%)
 no-repeat 6px 17px/4px 4px
}

.gg-shopping-cart::after,
.gg-shopping-cart::before {
 content: "";
 display: block;
 position: absolute;
 box-sizing: border-box;
 width: 2px;
 height: 14px;
 background: currentColor;
 top: 2px;
 left: 4px;
 transform: skew(12deg)
}

.gg-shopping-cart::after {
 height: 10px;
 top: 6px;
 left: 16px;
 transform: skew(-12deg)
} 


 .gg-list-tree {
 box-sizing: border-box;
 position: relative;
 display: block;
 width: 22px;
 height: 22px;
 transform: scale(var(--ggs,1));
 background:
 linear-gradient(
 to left,
 currentcolor 8px,
 transparent 0
 ) no-repeat left top/8px 8px,
 linear-gradient(
 to left,
 currentcolor 8px,
 transparent 0
 ) no-repeat center 3px/8px 2px,
 linear-gradient(
 to left,
 currentcolor 8px,
 transparent 0
 ) no-repeat 10px 17px/6px 2px,
 linear-gradient(
 to left,
 currentcolor 8px,
 transparent 0
 ) no-repeat 10px 3px/2px 16px
}

.gg-list-tree::after,
.gg-list-tree::before {
 content: "";
 display: block;
 box-sizing: border-box;
 position: absolute;
 width: 8px;
 height: 8px;
 border: 2px solid;
 right: 0
}

.gg-list-tree::after {
 bottom: 0
} 

.video-cam {
	text-align: center;
	position: relative;
	overflow: hidden;
	border-radius: 10px;
	height:43vh;
}

.video-cam-spinner {
	position: absolute;
    left: calc(25% + 82px);
    top: 30%;
}

.spinner-ring {
	display: none;
}

.spinner-ring.loading {
	display: block;
}

.video-cam video {
	width:100%;
	height:43vh;
	margin: 0px auto;
}
.video-cam canvas {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
}

#camera-button {
	position: absolute;
	right: 20px;
	top: 20px;
}

#scanned-output {
	box-sizing: border-box;
	width: 100%;
	margin: 10px auto 0px;
	border: 5px solid #CCC;
	border-radius: 10px;
	text-align: center;
	padding: 10px;
}

#addCodeButton {
	flex-grow: 1;
}

.hide {
	display: none !important;
}

.control-panel {
	display: flex;
    justify-content: space-around;
    flex-grow: 1;
    align-items: center;
}

.external-icon {
	font-size: 0.7em;
}







.spinner-ring {
  color: #39b8b8
}
.spinner-ring,
.spinner-ring:after {
  box-sizing: border-box;
}
.spinner-ring {
  display: inline-block;
  width: 80px;
  height: 80px;
}
.spinner-ring:after {
  content: " ";
  display: block;
  width: 64px;
  height: 64px;
  margin: 8px;
  border-radius: 50%;
  border: 6.4px solid currentColor;
  border-color: currentColor transparent currentColor transparent;
  animation: spinner-ring 1.2s linear infinite;
}
@keyframes spinner-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

